2011-01-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Part 2 of "Cleanup Scrollbar/ScrollbarClient relationship"
        https://bugs.webkit.org/show_bug.cgi?id=52779

        Rename ScrollbarClient -> ScrollableArea.

        * WebScrollBar.cpp:
        (WebScrollBar::scroll):
        * WebScrollBar.h:

2011-01-20  Adam Roben  <aroben@apple.com>

        Update for CACFLayerTreeHost changes

        Fixes <http://webkit.org/b/52852> Flushing layer changes and rendering are intertwined in
        CACFLayerTreeHost, but shouldn't be

        Reviewed by Simon Fraser.

        * WebView.cpp:
        (WebView::paint): Changed to flush layer changes via CACFLayerTreeHost, which will call back
        to our own flushing function if needed.

        * WebView.h: Removed shouldRender, which is no longer used or needed.

2011-01-21  Adam Roben  <aroben@apple.com>

        Update for WKCACFLayerRenderer -> CACFLayerTreeHost rename

        Also renamed WebView::m_layerRenderer to WebView::m_layerTreeHost to match.

        Fixes <http://webkit.org/b/52898> WKCACFLayerRenderer sounds like a render object, but isn't

        Reviewed by Simon Fraser.

        * WebPreferences.cpp:
        * WebView.cpp:
        (WebView::setAcceleratedCompositing): Also made sure to remove our HWND from the layer tree
        host before we get rid of the layer tree host itself.
        * WebView.h:

2011-01-21  Adam Roben  <aroben@apple.com>

        Replace some "sync compositing state" terminology with "flush pending GraphicsLayer changes"

        This seems to be the direction in which our code is moving. I chose "GraphicsLayer" as
        opposed to just "layer" because there are cases where we flush changes to CACFLayers that
        don't have a corresponding GraphicsLayer.

        Fixes <http://webkit.org/b/52894> "Sync compositing state" terminology in
        WKCACFLayerRenderer and friends is confusing

        Reviewed by Simon Fraser.
