@@ -1,5 +1,11 @@
 2011-01-21  Sam Weinig  <sam@webkit.org>
 
+        Fix windows build.
+
+        * WebScrollBar.h:
+
+2011-01-21  Sam Weinig  <sam@webkit.org>
+
         Reviewed by Anders Carlsson.
 
         Part 2 of "Cleanup Scrollbar/ScrollbarClient relationship"
